# my-own-compiler

./: .buildinfo  .gitignore  Calculette.g4  Calculette_MADANIAbdenour_TRIOLETHugo.g4  README.html  README.md  WIP-if-else.g4  entree.txt  exposant.md  genindex.html  index.html  launch_tests.sh  objects.inv  old_Calculette.g4  pyproject.toml  search.html  searchindex.js  test.txt  test.txt.cbap  test2³.txt
.github/workflows/: deploy-documentation.yml  main.yaml
_sources/: README.md
_sources/how-to/: example-code.md  exposant.md  gestion-variables.md
assets/: README.md
docs/: README.md  example_code.md  exposant.md  gestion_variables.md
docs/source/: conf.py  index.rst
how-to/: example-code.html  exposant.html  gestion-variables.html
src/: Grammar.g4  grammar.g4
src/TranspilePython/: README.md  TranspilePython.g4
tests/: README.md  booleens.in  booleens.out  booleens.test  booleens.xml  commentaires.test  commentaires.xml  declarations.test  declarations.xml  do_while.test  do_while.xml  else_if.test  else_if.xml  exposants.test  exposants.xml  expr_arithmetiques.test  expr_arithmetiques.xml  floats.xml  fonctions.xml  if.test  if.xml  launch_tests.py  print.test  print.xml  read.xml  tests_prof.test  tests_prof.xml
tools/: ci_script.sh  functions.sh  installations.txt  mvap.sh  mvap_sans_grammaire.sh  test.mvap
tools/mvap/: 3n+2.mvap  ALIRE  CBaP.java  MVaP.g4  MVaP.interp  MVaP.tokens  MVaPAssembler.java  MVaPAssemblerListener.java  MVaPBaseListener.java  MVaPLexer.interp  MVaPLexer.java  MVaPListener.java  MVaPParser.java  Makefile  Pile.java  (+2 more)
(+5 files in other folders)
